tests/expectations/parser-statement/unreachable/math_op_fail.out
Error [EPAR0370005]: expected  -- found 'b'
    --> test_0:1:13
     |
   1 | let x = a ; b;
     |             ^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', ';', '::', '?', 'as' -- found 'import'
    --> test_1:1:11
     |
   1 | let x = a import b;
     |           ^^^^^^
Error [EPAR0370005]: expected ';' -- found ','
    --> test_2:1:11
     |
   1 | let x = a , b;
     |           ^
Error [EPAR0370005]: expected ']' -- found ';'
    --> test_3:1:14
     |
   1 | let x = a [ b;
     |              ^
Error [EPAR0370005]: expected ';' -- found ']'
    --> test_4:1:11
     |
   1 | let x = a ] b;
     |           ^
Error [EPAR0370005]: expected '}', ',', ':' -- found ';'
    --> test_5:1:14
     |
   1 | let x = a { b;
     |              ^
Error [EPAR0370005]: expected ';' -- found '}'
    --> test_6:1:11
     |
   1 | let x = a } b;
     |           ^
Error [EPAR0370005]: expected ')', ',' -- found ';'
    --> test_7:1:14
     |
   1 | let x = a ( b;
     |              ^
Error [EPAR0370005]: expected ';' -- found ')'
    --> test_8:1:11
     |
   1 | let x = a ) b;
     |           ^
Error [EPAR0370005]: expected ';' -- found ':'
    --> test_9:1:11
     |
   1 | let x = a : b;
     |           ^
Error [EPAR0370005]: expected ':' -- found ';'
    --> test_10:1:14
     |
   1 | let x = a ? b;
     |              ^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', ';', '::', '?', 'as' -- found '_'
    --> test_11:1:11
     |
   1 | let x = a _ b;
     |           ^
Error [EPAR0370005]: expected ';' -- found '='
    --> test_12:1:11
     |
   1 | let x = a = b;
     |           ^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', ';', '::', '?', 'as' -- found '!'
    --> test_13:1:11
     |
   1 | let x = a ! b;
     |           ^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '[', '.', ';', '?', 'as' -- found '..'
    --> test_14:1:11
     |
   1 | let x = a .. b;
     |           ^^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', ';', '::', '?', 'as' -- found 'const'
    --> test_15:1:11
     |
   1 | let x = a const b;
     |           ^^^^^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', ';', '::', '?', 'as' -- found 'let'
    --> test_16:1:11
     |
   1 | let x = a let b;
     |           ^^^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', ';', '::', '?', 'as' -- found 'for'
    --> test_17:1:11
     |
   1 | let x = a for b;
     |           ^^^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', ';', '::', '?', 'as' -- found 'if'
    --> test_18:1:11
     |
   1 | let x = a if b;
     |           ^^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', ';', '::', '?', 'as' -- found 'else'
    --> test_19:1:11
     |
   1 | let x = a else b;
     |           ^^^^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', ';', '::', '?', 'as' -- found 'i8'
    --> test_20:1:11
     |
   1 | let x = a i8 b;
     |           ^^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', ';', '::', '?', 'as' -- found 'i16'
    --> test_21:1:11
     |
   1 | let x = a i16 b;
     |           ^^^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', ';', '::', '?', 'as' -- found 'i32'
    --> test_22:1:11
     |
   1 | let x = a i32 b;
     |           ^^^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', ';', '::', '?', 'as' -- found 'i64'
    --> test_23:1:11
     |
   1 | let x = a i64 b;
     |           ^^^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', ';', '::', '?', 'as' -- found 'i128'
    --> test_24:1:11
     |
   1 | let x = a i128 b;
     |           ^^^^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', ';', '::', '?', 'as' -- found 'u8'
    --> test_25:1:11
     |
   1 | let x = a u8 b;
     |           ^^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', ';', '::', '?', 'as' -- found 'u16'
    --> test_26:1:11
     |
   1 | let x = a u16 b;
     |           ^^^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', ';', '::', '?', 'as' -- found 'u32'
    --> test_27:1:11
     |
   1 | let x = a u32 b;
     |           ^^^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', ';', '::', '?', 'as' -- found 'u64'
    --> test_28:1:11
     |
   1 | let x = a u64 b;
     |           ^^^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', ';', '::', '?', 'as' -- found 'u128'
    --> test_29:1:11
     |
   1 | let x = a u128 b;
     |           ^^^^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', ';', '::', '?', 'as' -- found 'return'
    --> test_31:1:11
     |
   1 | let x = a return b;
     |           ^^^^^^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', ';', '::', '?', 'as' -- found 'self'
    --> test_32:1:11
     |
   1 | let x = a self b;
     |           ^^^^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', ';', '::', '?', 'as' -- found 'Self'
    --> test_33:1:11
     |
   1 | let x = a Self b;
     |           ^^^^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', ';', '::', '?', 'as' -- found 'true'
    --> test_34:1:11
     |
   1 | let x = a true b;
     |           ^^^^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', ';', '::', '?', 'as' -- found 'false'
    --> test_35:1:11
     |
   1 | let x = a false b;
     |           ^^^^^
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '(', '[', '{', '.', ';', '::', '?', 'as' -- found '0'
    --> test_36:1:11
     |
   1 | let x = a 0 b;
     |           ^
Error [EPAR0370005]: expected  -- found '='
    --> test_37:1:3
     |
   1 | x;=b;
     |   ^
Error [EPAR0370005]: expected an identifier, an integer literal -- found '='
    --> test_38:1:3
     |
   1 | x.=b;
     |   ^
Error [EPAR0370005]: expected '=', '&&=', '||=', '&=', '|=', '&=', '+=', '-=', '*=', '/=', '**=', '%=', '<<=', '>>=', ';' -- found ','
    --> test_39:1:2
     |
   1 | x,=b; // 43
     |  ^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'final', 'block', 'network', 'self' -- found '='
    --> test_40:1:3
     |
   1 | x[=b;
     |   ^
Error [EPAR0370005]: expected '=', '&&=', '||=', '&=', '|=', '&=', '+=', '-=', '*=', '/=', '**=', '%=', '<<=', '>>=', ';' -- found ']'
    --> test_41:1:2
     |
   1 | x]=b;
     |  ^
Error [EPAR0370005]: expected an identifier, '}' -- found '='
    --> test_42:1:3
     |
   1 | x{=b;
     |   ^
Error [EPAR0370005]: expected '=', '&&=', '||=', '&=', '|=', '&=', '+=', '-=', '*=', '/=', '**=', '%=', '<<=', '>>=', ';' -- found '}'
    --> test_43:1:2
     |
   1 | x}=b;
     |  ^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', ')', '[', ',', 'true', 'false', 'final', 'block', 'network', 'self' -- found ';'
    --> test_44:1:4
     |
   1 | x=(;
     |    ^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'final', 'block', 'network', 'self' -- found ')'
    --> test_45:1:3
     |
   1 | x=);
     |   ^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'final', 'block', 'network', 'self' -- found ':'
    --> test_46:1:3
     |
   1 | x=:;
     |   ^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'final', 'block', 'network', 'self' -- found '::'
    --> test_47:1:3
     |
   1 | x=::;
     |   ^^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'final', 'block', 'network', 'self' -- found '='
    --> test_48:1:3
     |
   1 | x?=b;
     |   ^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'final', 'block', 'network', 'self' -- found '='
    --> test_49:1:4
     |
   1 | x!==b;
     |    ^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'final', 'block', 'network', 'self' -- found '='
    --> test_50:1:4
     |
   1 | x>==b;
     |    ^
Error [EPAR0370005]: expected an identifier, a program id, an address literal, an integer literal, a static string, '!', '-', '(', '[', 'true', 'false', 'final', 'block', 'network', 'self' -- found '='
    --> test_51:1:4
     |
   1 | x<==b;
     |    ^
Error [EPAR0370005]: expected '=', '&&', '||', '&&=', '||=', '&', '&=', '|', '|=', '^', '&=', '==', '!=', '<', '<=', '>', '>=', '+', '+=', '-', '-=', '*', '*=', '/', '/=', '**', '**=', '%', '%=', '<<', '<<=', '>>', '>>=', '[', '.', ';', '?', 'as' -- found '..'
    --> test_52:1:2
     |
   1 | x..=b;
     |  ^^
